--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nuxt": "3.0.0-rc.11"
   },
   "dependencies": {
-    "@nuxt/ui": "^0.3.3"
+    "@nuxt/ui": "^0.3.3",
+    "@nuxtjs/web-vitals": "^0.1.10"
   }
 }
