--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prepare": "is-ci || husky install"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.11"
+    "@nuxtjs/tailwindcss": "^5.3.3",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "husky": "^8.0.1",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^13.0.3",
+    "nuxt": "3.0.0-rc.11",
+    "prettier": "^2.7.1"
   },
   "dependencies": {
-    "@nuxt/ui": "^0.3.3",
-    "@nuxtjs/web-vitals": "^0.1.10"
+    "daisyui": "^2.31.0"
+  },
+  "lint-staged": {
+    "*.(ts|vue)": "prettier --write"
   }
 }
