--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.3.3",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@types/node": "^18.11.11",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
@@ -18,7 +19,12 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
-    "daisyui": "^2.31.0"
+    "@types/semver": "^7.3.13",
+    "autoprefixer": "^10.0.2",
+    "daisyui": "^2.31.0",
+    "postcss": ">=8.3.3 <9.0.0",
+    "semver": "^7.3.8",
+    "webpack": ">=5.0.0 <6.0.0"
   },
   "lint-staged": {
     "*.(ts|vue)": "prettier --write"
