--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "prepare": "is-ci || husky install"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.3",
-    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
-    "@types/node": "^18.11.11",
-    "husky": "^8.0.1",
+    "@nuxtjs/tailwindcss": "^5.3.5",
+    "@trivago/prettier-plugin-sort-imports": "^3.4.0",
+    "@types/node": "^18.19.33",
+    "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "lint-staged": "^13.0.3",
-    "nuxt": "3.0.0-rc.11",
-    "prettier": "^2.7.1"
+    "lint-staged": "^13.3.0",
+    "nuxt": "^3.11.2",
+    "prettier": "^2.8.8"
   },
   "dependencies": {
-    "@types/semver": "^7.3.13",
-    "autoprefixer": "^10.0.2",
-    "daisyui": "^2.31.0",
-    "postcss": ">=8.3.3 <9.0.0",
-    "semver": "^7.3.8",
-    "webpack": ">=5.0.0 <6.0.0"
+    "@types/semver": "^7.5.8",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^2.52.0",
+    "postcss": "^8.4.38",
+    "semver": "^7.6.2",
+    "webpack": "^5.91.0"
   },
   "lint-staged": {
     "*.(ts|vue)": "prettier --write"
-  }
+  },
+  "packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0"
 }
