--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/semver": "^7.5.8",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^2.52.0",
     "postcss": "^8.4.38",
