--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "prepare": "is-ci || husky install"
+    "start": "cross-env NODE_ENV=production node ./server.js",
+    "build": "remix build",
+    "dev": "remix dev",
+    "typecheck": "tsc"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.5",
+    "@remix-run/dev": "^2.12.0",
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
     "@types/node": "^18.19.33",
+    "@types/react": "^18.3.5",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.3.0",
-    "nuxt": "^3.11.2",
-    "prettier": "^2.8.8"
+    "postcss": "^8.4.45",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.4.11",
+    "vite": "^5.4.4"
   },
   "dependencies": {
+    "@remix-run/node": "^2.12.0",
+    "@remix-run/react": "^2.12.0",
+    "@remix-run/serve": "^2.12.0",
     "@types/semver": "^7.5.8",
     "@vercel/analytics": "^1.3.1",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^2.52.0",
-    "postcss": "^8.4.38",
+    "isbot": "^4.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "semver": "^7.6.2",
+    "swr": "^2.2.5",
     "webpack": "^5.91.0"
   },
   "lint-staged": {
