--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@remix-run/serve": "^2.12.0",
     "@types/semver": "^7.5.8",
     "@vercel/analytics": "^1.3.1",
+    "cross-env": "^7.0.3",
     "isbot": "^4.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
