feat: update CI chain to update ScrapMaxVersion during CI
Signed-off-by: spencercjh <spencercjh@gmail.com>

--- a/.github/workflows/latest-docker-image.yml
+++ b/.github/workflows/latest-docker-image.yml
@@ -17,6 +17,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build the Docker image
-        run: make image-data-scraper
+        run: |
+          VERSION=$(curl -sSL https://cdn.dl.k8s.io/release/stable.txt)
+          ScrapMaxVersion=$VERSION make image-data-scraper
       - name: Push docker image to ghcr.io
         run: docker push ghcr.io/kaniuse/data-scraper:latest
